- The picked colors are saved in INI file.
- Middle click on ColorSelector to invoke PaletteEditor.
- The currently "picked" color slot is highlighted with VibroColors.
- FIX: Clicking the thin line beetween the key color and the other colors
  no longer invokes color picking for the selected color.
- Pressing F1 changes the ActiveColorIndex to the color under the cursor.

2023.02.27
- Undosystem now saves only region data instead of palette+region in region type
  undoitem. (It was correct in the file format text, only implementation was wrong.)
- New block type in filetypes (SystemState - S-block).
- System state (image current state, palette, undo state and CEL if exists) saved
  to state.bds.
- ColorSelector selects color only by left clicking on it.
- Removing some obsolete code and declarations here and there.
- Button appearance can be changed in INI file. (Settings/ModernGraphics)
- Right clicking on ColorSelector invokes PaletteEditor. Cannot go back, you have
  to quit (Q->Y).
- Palette Editor shows the first 256 colors, highlights the active color.

2023.02.26
- Undo/Redo buttons are disabled when nothing to undo/redo.
- BUGFix: Sometimes the render to texture failed to render. Especially when after
  changing zoom level the whole picture got outside of DrawArea.
- Message handling moved to TControls for messages needed to be handled by TControls.

2023.02.25
- UndoSystem state saved and loaded (temp.bdu).

2023.02.24
- File format changed.
- File format documented in fileformats.txt.

2023.02.22
- Added Undo/Redo code to Circle.
- Added Undo/Redo code to Draw.
- BugFix: Controls now captures OnMouseDown if none of its child does it.
  This prevents Draw to start drawing without pressing LMB over the draw area.
- Added Undo/Redo code to Fill.
- Added Undo/Redo code to FillTo.
- Added Undo/Redo code to Line.
- Added Undo/Redo code to Sep.
- Added Undo/Redo code to PutCEL.
- Added UndoLimit to Settings (16 steps by default).