@@ -30,7 +30,7 @@ Tool2=LINE
 Tool3=CIRCLE
 Tool4=SEP.
 Tool5=FILLTO
-ActiveTool=2
+ActiveTool=1
 Ink0=OPAQUE
 Ink1=OPAQUE
 Ink2=L GRAD
@@ -38,7 +38,7 @@ Ink3=L GRAD
 Ink4=H GRAD
 Ink5=H GRAD
 ActiveInk=0
-FillShapes=Yes
+FillShapes=No
 ClearKeyColor=Yes
 UseAlpha=No
 
@@ -56,5 +56,5 @@ Selected4=4
 Selected5=5
 Selected6=10
 Selected7=7
-ActiveColor=10
+ActiveColor=5
 
